NetBSD Problem Report #56657

From www@netbsd.org  Sun Jan 23 13:20:02 2022
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 5BF161A9239
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 23 Jan 2022 13:20:02 +0000 (UTC)
Message-Id: <20220123132000.E2B8B1A923A@mollari.NetBSD.org>
Date: Sun, 23 Jan 2022 13:20:00 +0000 (UTC)
From: nbsd@hck.sk
Reply-To: nbsd@hck.sk
To: gnats-bugs@NetBSD.org
Subject: Neither plainrsa-gen utility nor its manual page, plainrsa-gen(8), is present in distribution
X-Send-Pr-Version: www-1.0

>Number:         56657
>Category:       bin
>Synopsis:       Neither plainrsa-gen utility nor its manual page, plainrsa-gen(8), is present in distribution
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Jan 23 13:25:00 +0000 2022
>Closed-Date:    Sun Jan 23 14:47:44 +0000 2022
>Last-Modified:  Sun Jan 23 14:47:44 +0000 2022
>Originator:     Juraj Hercek
>Release:        NetBSD 9.2, stable branch
>Organization:
HCK, s.r.o.
>Environment:
NetBSD gaia 9.2_STABLE NetBSD 9.2_STABLE (GENERIC) #0: Fri Jan  7 09:58:54 CET 2022  joe@doe:/home/joe/netbsd/build/netbsd-9/obj/sys/arch/amd64/compile/GENERIC amd64
>Description:
The plainrsa-gen utility, mentioned in racoon.ctl(5) manual page, used for generation of plain RSA keys is not part of the distribution. The sourceforge's ipsec-tools package is not maintained anymore and it is close to impossible to get plainrsa-gen in binary form from any source.
>How-To-Repeat:
On NetBSD, version 9.2, try:

# plainrsa-gen
ksh: plainrsa-gen: not found

# man plainrsa-gen
man: no entry for plainrsa-gen in the manual.
>Fix:
Patches that fix this problem are available at:

http://www.hck.sk/noindex/plain-rsa-gen-fixes-redacted/0001-Make-plainrsa-gen-compiling-with-newer-OpenSSL.patch

http://www.hck.sk/noindex/plain-rsa-gen-fixes-redacted/0002-Add-Makefile-for-plainrsa-gen-utility.patch

http://www.hck.sk/noindex/plain-rsa-gen-fixes-redacted/0004-Add-plainrsa-gen-and-related-to-distribution-lists.patch

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/56657 CVS commit: src
Date: Sun, 23 Jan 2022 09:35:45 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Sun Jan 23 14:35:45 UTC 2022

 Modified Files:
 	src/crypto/dist/ipsec-tools/src/racoon: plainrsa-gen.c
 	src/distrib/sets/lists/base: mi
 	src/distrib/sets/lists/debug: mi
 	src/distrib/sets/lists/man: mi
 	src/usr.sbin: Makefile
 Added Files:
 	src/usr.sbin/plainrsa-gen: Makefile

 Log Message:
 PR/56657: Juraj Hercek: Add plainrsa-gen utility mentioned in racoon.conf(5)
 and fix it for OpenSSL 1.1


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 \
     src/crypto/dist/ipsec-tools/src/racoon/plainrsa-gen.c
 cvs rdiff -u -r1.1288 -r1.1289 src/distrib/sets/lists/base/mi
 cvs rdiff -u -r1.371 -r1.372 src/distrib/sets/lists/debug/mi
 cvs rdiff -u -r1.1732 -r1.1733 src/distrib/sets/lists/man/mi
 cvs rdiff -u -r1.285 -r1.286 src/usr.sbin/Makefile
 cvs rdiff -u -r0 -r1.1 src/usr.sbin/plainrsa-gen/Makefile

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 23 Jan 2022 14:47:44 +0000
State-Changed-Why:
Committed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.