PR/56657: Juraj Hercek: Add plainrsa-gen utility mentioned in racoon.conf(5) and fix it for OpenSSL 1.1